--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Shotsfired.io!</title>
+  <title>ArmyTanks.io!</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="home-screen">
-    <h1>Shotsfired.io!</h1>
+    <h1>ArmyTanks.io!</h1>
     <input type="text" id="username" placeholder="Enter username" />
     
     <h2>Select Your Tank</h2>
