--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
   <canvas id="gameCanvas" style="display: none;"></canvas>
 
-  <script src="game.js"></script>
+  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
+<script src="game.js"></script>
 </body>
 </html>
