--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Plorra.io!</title>
+    <title>Petal.io</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script src="client.js"></script>
 </body>
 </html>
