--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Petal.io</title>
+    <title>Plorra.io</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
+
+    <!-- Bag icon button to toggle inventory -->
+    <button id="bag-button" style="
+        position: fixed;
+        bottom: 20px;
+        left: 20px;
+        width: 40px;
+        height: 40px;
+        background: url('https://cdn-icons-png.flaticon.com/512/891/891462.png') no-repeat center center;
+        background-size: contain;
+        border: none;
+        cursor: pointer;
+        outline: none;
+        z-index: 1000;
+    "></button>
+
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
     <script src="client.js"></script>
 </body>
