--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mini BlockTanks.io</title>
+  <title>BlockTanks.io</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <canvas id="game" width="800" height="600"></canvas>
+  <div id="homeScreen" class="home-screen">
+    <h1>Welcome to BlockTanks.io</h1>
+    <input id="usernameInput" placeholder="Enter your username" maxlength="15" />
+    <button id="startBtn">Start Game</button>
+  </div>
+
+  <canvas id="game" width="800" height="600" style="display:none;"></canvas>
 
   <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
+
