--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button id="startBtn">Start Game</button>
   </div>
 
-  <canvas id="game" width="800" height="600" style="display:none;"></canvas>
+  <canvas id="game" style="display:none;"></canvas>
 
   <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
   <script src="game.js"></script>
