--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
   <div id="homeScreen" class="home-screen">
     <h1>Welcome to ArmyTanks.io!</h1>
     <input id="usernameInput" placeholder="Enter your username" maxlength="15" />
+    <select id="tankTypeSelect">
+      <option value="sniper">Sniper</option>
+      <option value="minigun">Minigun</option>
+      <option value="shotgun">Shotgun</option>
+    </select>
     <button id="startBtn">Start Game</button>
   </div>
 
   <canvas id="game" style="display:none;"></canvas>
 
-  <!-- Death screen overlay -->
-  <div id="deathScreen" style="display:none; 
-    position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; 
-    background: rgba(0,0,0,0.85); color: white; 
-    display: flex; flex-direction: column; justify-content: center; align-items: center; 
-    font-family: Arial, sans-serif; font-size: 2rem; z-index: 1000;">
-    <div>Oh no! you died!</div>
-    <button id="respawnBtn" style="margin-top: 20px; padding: 10px 20px; font-size: 1.5rem; cursor: pointer;">Respawn</button>
+  <div id="deathScreen" class="home-screen" style="display:none; flex-direction: column;">
+    <h1>Oh no! You died!</h1>
+    <button id="respawnBtn">Respawn</button>
   </div>
 
   <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
