--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
       <button id="infoBtn">Info</button>
 
       <select id="tankDropdown">
-        <option value="default">Default Tank</option>
-        <option value="sniper">Sniper</option>
-        <option value="heavy">Heavy</option>
-      </select>
+  <option value="default">Default Tank</option>
+  <option value="sniper">Sniper</option>
+  <option value="minigun">Minigun</option>
+  <option value="shotgun">Shotgun</option>
+</select>
 
       <button id="startBtn">Start Game</button>
     </div>
