--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>BlockTanks.io</title>
+  <title>ArmyTanks.io!</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- Home screen -->
   <div id="homeScreen" class="home-screen">
-    <h1>Welcome to BlockTanks.io</h1>
+    <h1>Welcome to ArmyTanks.io!</h1>
 
     <input id="usernameInput" placeholder="Enter your username" maxlength="15" />
 
